--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@quasar/extras": "^1.16.4",
     "axios": "^1.6.2",
+    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0"
