--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@quasar/extras": "^1.16.4",
     "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "quasar": "^2.6.0",
