--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "quasar": "^2.6.0",
+    "query-string": "^8.1.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0"
   },
